--- a/lib.fast/src/main/res/values/styles.xml
+++ b/lib.fast/src/main/res/values/styles.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Base application theme. -->
+    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">false</item>
+    </style>
+
     <declare-styleable name="RefreshView">
         <attr name="type1" format="enum">
             <enum name="sun" value="0" />
         </attr>
 
     </declare-styleable>
+
+
     <style name="Theme.SmoothProgressBarDefaults" parent="android:Theme">
         <item name="spbStyle">@style/SmoothProgressBar</item>
     </style>
+
+
     <style name="SPB" parent="android:Widget.ProgressBar.Horizontal"></style>
+
+
     <style name="SmoothProgressBar" parent="SPB">
         <item name="spb_color">@color/spb_default_color</item>
         <item name="spb_sections_count">@integer/spb_default_sections_count</item>
