--- a/lib.fast/src/main/res/values/colors.xml
+++ b/lib.fast/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+
     <color name="window_background">#f5f5f5</color>
     <color name="main_gray">#9A9A9A</color>
     <color name="province_line_border">#C7C7C7</color>
