项目快速开发（测试）

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,10 @@
         android:layout_height="wrap_content"
         android:text="MVP"/>
 
+    <Button
+        android:id="@+id/qrcode_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="QRCode"/>
+
 </LinearLayout>
