--- a/lib.fast/src/main/res/values/styles.xml
+++ b/lib.fast/src/main/res/values/styles.xml
@@ -59,4 +59,14 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
     </style>
+
+    <!-- dialog属性 -->
+    <style name="dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/none</item>
+        <!-- <item name="android:backgroundDimEnabled">false</item> -->
+    </style>
 </resources>
