--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,9 @@
         android:layout_height="wrap_content"
         android:text="Generate QRCode"/>
 
+    <Button
+        android:id="@+id/num_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Num Text Switcher"/>
 </LinearLayout>
