--- a/lib.fast/src/main/res/values/colors.xml
+++ b/lib.fast/src/main/res/values/colors.xml
@@ -14,4 +14,8 @@
     <color name="text_black">#000000</color>
     <color name="line_gray">#E0E0E0</color>
 
+    <!--Wheel View-->
+    <color name="j_wheel_timebtn_nor">#54a3fa</color>
+    <color name="j_wheel_timebtn_pre">#CCCCCC</color>
+
 </resources>
